Fix tag list not hidden on IE10.

--- a/assets/scss/create_form.scss
+++ b/assets/scss/create_form.scss
@@ -118,9 +118,16 @@
 		overflow: auto;
 		max-height: 120px;
 
+		&[hidden] {
+			display: none;
+		}
+
 		[hidden],
 		:empty {
-			display: none;
+			opacity: 0;
+			transform: scale(0);
+			display: block;
+			transition-timing-function: ease;
 		}
 
 		li {
